# pii-detector-messaging

./: .dockerignore  .env.example  .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml
data/eval/: sample.jsonl
scripts/: run_eval.py
src/pii_detector/: cli.py
src/pii_detector/api/: app.py  schemas.py
src/pii_detector/api/routers/: detect.py  health.py
src/pii_detector/core/: config.py
src/pii_detector/detection/: base.py  pipeline.py  types.py
src/pii_detector/eval/: datasets.py  metrics.py  runner.py
tests/api/: test_detect.py  test_health.py
tests/detection/: test_types.py
tests/eval/: test_metrics.py
